--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
 spring.application.name=clientAllocationSystem
 
 
-
-server.port=8080
+server.port=8088
 spring.datasource.url=jdbc:postgresql://localhost:5432/allocationdb
 spring.datasource.username=admin
 spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+`
+
+
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.default_schema=allocationSystemV2
